# tribes-server-cloud

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  server.py
datastore/: __init__.py  access.py  messages.py  topics.py  wall.py
garden/: __init__.py
server_src/: __init__.py  api.py  utils.py
server_src/templates/: approval_access_requests.html  dashboard.html  finish_setup.html  inbox_message.html  member_add.html  member_block.html  member_message.html  member_settings.html  mod_error.html  mod_login.html  mod_response.html  moderator_add.html  moderator_delete.html  moderator_inbox.html  moderator_message.html  moderator_message_settings.html  moderator_settings.html  setup.html  view_access_requests.html  welcome_member.md  welcome_message_form.html  welcome_public.md
server_src/templates/components/: keyform.html  member_menu.html  member_message_form.html  message_menu.html  messages_inbox.html  moderator_menu.html  moderator_message_form.html  single_message.html  welcome_form.html
server_src/templates/layouts/: admin.html
utils/: __init__.py  dbsetup.py
