[project]
name = "tribes-python-server-cloud"
version = "0.1.0"
description = "This is an Python implementation of the Tribes Server Protocol. This server is optimized to run "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "art>=6.5",
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "lwe-python>=0.1.3",
    "markdown>=3.10",
    "names-generator>=0.2.0",
    "pgpy>=0.6.0",
    "pyotp>=2.9.0",
    "redis>=6.4.0",
    "waitress>=3.0.2",
]
